Build Grandle 환경 설정
opencv module 사용하도록 추가
opencv module이 kotlin JVM 2.1 로 빌드되어 있으므로
APP도 Koflin JVM 2.1 사용하도록 설정.
Java JVM도 2.1을 사용하도록 설정

--- a/AndroidTest/openCVmixedprocessing/gradle/libs.versions.toml
+++ b/AndroidTest/openCVmixedprocessing/gradle/libs.versions.toml
@@ -6,6 +6,8 @@ espressoCore = "3.6.1"
 appcompat = "1.7.0"
 material = "1.12.0"
 constraintlayout = "2.2.1"
+opencv = "4.11.0"
+kotlinReflect = "2.1.0"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -14,6 +16,8 @@ espresso-core = { group = "androidx.test.espresso", name = "espresso-core", vers
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+opencv = { module = "org.opencv:opencv", version.ref = "opencv" }
+kotlin-reflect = { group = "org.jetbrains.kotlin", name = "kotlin-reflect", version.ref = "kotlinReflect" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
