--- a/AndroidTest/openCVmixedprocessing/app/build.gradle
+++ b/AndroidTest/openCVmixedprocessing/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     alias(libs.plugins.android.application)
+    id 'org.jetbrains.kotlin.android' version '1.9.23'
 }
 
 android {
@@ -23,9 +24,18 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
     }
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(21)
+        }
+    }
+    kotlin {
+        jvmToolchain(21)
+    }
+
     externalNativeBuild {
         cmake {
             path file('src/main/cpp/CMakeLists.txt')
@@ -45,4 +55,7 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+
+    implementation libs.opencv
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.9.23'
 }
