--- a/easyqc3/app/src/main/AndroidManifest.xml
+++ b/easyqc3/app/src/main/AndroidManifest.xml
@@ -51,6 +51,12 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:exported="true"
+            android:name="CameraCalibrationActivity"
+            android:label="@string/app_name"
+            android:configChanges="keyboardHidden|orientation"/>
+
     </application>
 
 </manifest>
