delete bak file

--- a/.gitignore
+++ b/.gitignore
@@ -401,3 +401,4 @@ $RECYCLE.BIN/
 .gitignore.back
 flutter_ex/android/java_pid33504.hprof
 /flutter_Inspection
+easyqc3/app/src/main/java/com/example/easyqc3/MainActivity.java - 복사본.bak
