UI 수정 완료 및 일반 로그인 연동(서버 에러 미해결)

--- a/easyqc3/app/src/main/AndroidManifest.xml
+++ b/easyqc3/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         android:roundIcon="@mipmap/easyqc_launcher_round"
         android:theme="@style/Theme.Easyqc3"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
 
         tools:targetApi="31">
         <activity
