demo 로그인 환경 구현

--- a/easyqc3/gradle/libs.versions.toml
+++ b/easyqc3/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ annotation = "1.8.1"
 lifecycleLivedataKtx = "2.8.4"
 lifecycleViewmodelKtx = "2.8.4"
 opencv = "4.11.0"
+firebaseAuthKtx = "23.2.0"
 
 
 [libraries]
@@ -30,6 +31,7 @@ androidx-annotation = { group = "androidx.annotation", name = "annotation", vers
 androidx-lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycleLivedataKtx" }
 androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
 opencv = { module = "org.opencv:opencv", version.ref = "opencv" }
+firebase-auth-ktx = { group = "com.google.firebase", name = "firebase-auth-ktx", version.ref = "firebaseAuthKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
